[build-system]
requires = [
    "setuptools==80.9.0",
    "setuptools_scm==9.2.0",
]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
name = "colosseum"
description = "An independent implementation of the CSS layout algorithm"
readme = "README.md"
requires-python = ">= 3.9"
license.text = "New BSD"
authors = [
    {name="Russell Keith-Magee", email="russell@keith-magee.com"}
]
maintainers = [
    {name="BeeWare Team", email="team@beeware.org"}
]
keywords = [
    "CSS",
]
classifiers=[
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development",
    "Topic :: Software Development :: User Interfaces",
]

[project.optional-dependencies]
# Extras used by developers *of* colosseum are pinned to specific versions to
# ensure environment consistency.
dev = [
    "pre-commit == 4.3.0",
    "pytest == 8.4.2",
    "setuptools_scm == 9.2.0",
    "tox == 4.30.3",
]

[project.urls]
Homepage = "https://github.com/beeware/colosseum"
Funding = "https://beeware.org/contributing/membership/"
Tracker = "https://github.com/beeware/colosseum/issues"
Source = "https://github.com/beeware/colosseum"

[tool.ruff.lint]
extend-select = [
    "E",      # pycodestyle
    "W",      # pycodestyle
    "F",      # pyflakes
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "YTT",    # flake8-2020
    "ASYNC",  # flake8-async
    "C4",     # flake8-comprehensions
    "I",      # isort
    # The SIM rules are *very* opinionated, and don't necessarily make for better code.
    # They may be worth occasionally turning on just to see if something could actually
    # use improvement.
    # "SIM",    # flake8-simplify
]
ignore = [
    "E501",    # line length
    "B007",    # loop control variable not used
    "B018",    # useless expression
    "B019",    # memory leaks from functools.lru_cache / functools.cache
    "B024",    # abstract base class without abstract methods / properties
    "B027",    # empty method in abstract base class
    "B904",    # use raise ... from ...
    "C400",    # unnecessary generator
    "C408",    # use dict literal instead of dict()
    "C414",    # unnecessary list() use within sorted()
    "C416",    # unnecessary list comprehension
]

[tool.ruff.lint.per-file-ignores]
"docs/conf.py" = ["F401"]
[tool.setuptools_scm]
# To enable SCM versioning, we need an empty tool configuration for setuptools_scm

[tool.towncrier]
directory = "changes"
package = "colosseum"
package_dir = "src"
filename = "docs/background/releases.rst"
title_format = "{version} ({project_date})"
issue_format = "`#{issue} <https://github.com/beeware/colosseum/issues/{issue}>`_"
template = "changes/template.rst"
underlines = ["-", "^", "\""]
type = [
    { directory = "feature", name = "Features", showcontent = true },
    { directory = "bugfix", name = "Bugfixes", showcontent = true },
    { directory = "removal", name = "Backward Incompatible Changes", showcontent = true },
    { directory = "doc", name = "Documentation", showcontent = true },
    { directory = "misc", name = "Misc", showcontent = false },
]
