[metadata]
name = colosseum
version = attr: colosseum.__version__
project_urls =
    Funding = https://beeware.org/contributing/membership/
    Tracker = https://github.com/beeware/colosseum/issues
    Source = https://github.com/beeware/colosseum
author = Russell Keith-Magee
author_email = russell@keith-magee.com
classifiers=
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development
    Topic :: Software Development :: User Interfaces
license = New BSD
license_files =
    LICENSE
description = Colosseum is an independent implementation of the CSS layout algorithm
long_description = file: README.rst
long_description_content_type = text/x-rst

[options]
python_requires = >= 3.7
packages = find:
package_dir =
    = src
test_suite = tests

[options.packages.find]
where = src

[flake8]
# https://flake8.readthedocs.org/en/latest/
exclude=\
    venv/*,\
    local/*,\
    docs/*,\
    build/*,\
    settings.py,\
    */migrations/*,\
    tests/w3c/*,\
    .eggs/*,\
    .tox/*
max-complexity = 25
max-line-length = 119
# The following issues are ignored because they do not match our code style:
# E133: closing bracket missing indentation
# E226: missing whitespace around arithmetic operator
# W503: line break occurred before a binary operator
ignore = E133,E226,W503

[isort]
combine_as_imports = true
include_trailing_comma = true
line_length = 79
multi_line_output = 3
not_skip = __init__.py
skip =
    .tox
    docs/conf.py
    venv
    local
